--- a/2-website-주혜민/css/index.css
+++ b/2-website-주혜민/css/index.css
@@ -180,8 +180,11 @@ html{scroll-behavior: smooth;}
 	align-items: center;
   width: 100%;
   height: 550px;
+  background-color: #000;
   background-image: url(../image/slide-bg.png);
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .section2-character h2{
   font-family: "GiantsInline";
